Signed-off-by: kitaberesaman <huli.ateen@gmail.com>

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://www.patta.com/en/catalogue/st-screws"><img class="img-responsive" src="https://www.patta.com/assets/static/23523A81-99F2-4E90-9AE7-6721178507CE/main/_0003_screws_din7983.png">
+                    <p>Screws<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=27"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/fcf3da93-8fc1-443a-9a2f-5e0c6c2ad7b2.png">
+                    <p>Blind Rivets<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=29"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/f2e0d965-fb0e-4263-9379-6ef9e7491aa3.png">
+                    <p>Rivet Nuts<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=29"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/f2e0d965-fb0e-4263-9379-6ef9e7491aa3.png">
+                    <p>Rivet Nuts<br></p>
+                </a></div>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
