Signed-off-by: kitaberesaman <huli.ateen@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,10 +16,23 @@
             <div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive" src="assets/img/patta.jpg"></div>
         </div>
     </div>
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="https://www.patta.com/en/catalogue">Product</a></li>
+        <li><a href="https://www.patta.com/en/service">Service</a></li>
+        <li><a href="https://www.patta.com/en/contact">Contact</a></li>
+    </ul>
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <p>Our Products</p>
+            </div>
+        </div>
+    </div>
+    <div class="container" style="margin-top: 50px;margin-bottom: 20px;">
+        <div class="row">
+            <div class="col-md-12">
+                <p>Since our first blind rivet was manufactured in 1982, followed by self-drilling screws, we at the PATTA Group have continuously improved on technology and the quality of our products, invested massive resources in product development, moving toward becoming a diversified company of manufacturing service provider. We not only focus on R&amp;D, but also pursue high standard and consistent production process and services. At the same time, we listen to our partners' needs around the world. PATTA is qualified with TS 16949, ISO 9001, and ISO 14001<br></p>
             </div>
         </div>
     </div>
@@ -34,13 +47,91 @@
             <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=29"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/f2e0d965-fb0e-4263-9379-6ef9e7491aa3.png">
                     <p>Rivet Nuts<br></p>
                 </a></div>
-            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=29"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/f2e0d965-fb0e-4263-9379-6ef9e7491aa3.png">
-                    <p>Rivet Nuts<br></p>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=30"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/236c022f-bfb0-4040-811d-ff26d2663a14.png">
+                    <p>Fixings &amp; Anchors<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=31"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/acbc1972-929c-4bbe-bd16-d0a0a023ea52.png">
+                    <p>Nails<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=32"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/d040f593-225d-41d2-bb4d-162de6d7d37d.png">
+                    <p>Doors &amp; Windows<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=33"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/a29a5a43-9f45-4521-8292-ffffa2a7202a.png">
+                    <p>Power Tools<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=34"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/5d0560f9-73aa-497b-aab5-88ddefe70419.png">
+                    <p>Air Tools<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=35"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/c53e23e4-aa77-4b16-bbcd-edb1f65ca242.png">
+                    <p>Hand Tools<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=36"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/e214d11f-36d2-4a47-85d1-5e2aed00c245.png">
+                    <p>Accessories<br></p>
+                </a></div>
+            <div class="col-md-3 col-sm-4 col-xs-6" style="box-shadow: 0px 0px 7px 1px;"><a href="https://patta.simarttech.com/en/product?type=37"><img class="img-responsive" src="https://patta.simarttech.com/ProductType/Image/c68191f5-8e6d-4589-ba34-9dbb362a1b8c.png">
+                    <p>Weld Rods<br></p>
                 </a></div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <div class="container" style="margin-top: 50px;">
+        <div class="row">
+            <div class="col-md-12">
+                <p>Today, PATTA has become an international brand.<br>With exceptional service and technology, we provide comprehensive fasteners and a wide range of hardware solutions.<br><br>PATTA provide One-Stop Services from design, production, to logistics. We play as a trusted partner in the hardware industry in the long run.&nbsp;<br><br></p>
+            </div>
+        </div>
+    </div>
+    <div class="container" style="margin-top: 10px;">
+        <div class="row">
+            <div class="col-md-4 col-sm-4" style="border-top-style: solid;border-top-color: rgb(113,110,110);"><img class="img-responsive" src="assets/img/High%20Standard%20Quality.jpg">
+                <p style="margin-top: 10px;"><strong>High Standard Quality</strong><br>We realize innovation and focus on details without compromising to&nbsp;earn customer satisfaction with&nbsp;quality.<br></p>
+            </div>
+            <div class="col-md-4 col-sm-4" style="border-top-style: solid;border-top-color: rgb(113,110,110);"><img class="img-responsive" src="assets/img/Seamless%20Services.jpg">
+                <p style="margin-top: 10px;"><strong>Seamless Services</strong><br>We&nbsp;provide one-stop&nbsp;services and the most direct support to&nbsp;customers and be their powerful backup.<br></p>
+            </div>
+            <div class="col-md-4 col-sm-4" style="border-top-style: solid;border-top-color: rgb(113,110,110);"><img class="img-responsive" src="assets/img/Logistic.jpg">
+                <p style="margin-top: 10px;"><strong>Fast-moving Supply &amp; Logistics</strong><br>We keep up with Industry 4.0 development trends to satisfy&nbsp;global customer needs by providing stable and just-in-time delivery.<br><br><br></p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <p class="text-center" style="margin-top: 10px;margin-bottom: 10px;">We will strive to provide premium quality of fastening and hardware solutions to our customers worldwide. We respect every particular need from different markets and countries by establishing a full range of product and service to earn mutually beneficial and long-term partnership.<br></p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-6"><img class="img-responsive" src="assets/img/quality-img-inspect.jpg"></div>
+            <div class="col-md-6 col-sm-6 col-xs-6"><img class="img-responsive" src="assets/img/quality-img-machine.jpg"></div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <p class="text-center" style="margin-top: 50px;margin-bottom: 20px;">We focus on details without compromising from quality assurance, packaging, to shipping procedures. We strictly respect and follow ISO9001, ISO/TS16949, and ISO 14001 standard to pursue quality excellence.<br></p>
+            </div>
+        </div>
+    </div>
+    <footer>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="https://www.patta.com/en/terms-conditions">Terms &amp; Conditions<br></a></li>
+            <li><a href="https://www.patta.com/en/privacy-policy">Privacy Policy</a></li>
+            <li><a href="https://www.patta.com/en/cookie-policy">Cookie Policy</a></li>
+        </ul>
+        <div class="container" style="background: #c6c6c6;margin: 0;padding: 0;">
+            <div class="row" style="margin-left: 10px;">
+                <div class="col-md-12">
+                    <p>PATTA International<br></p>
+                </div>
+            </div>
+        </div>Copyright @<span id="thisyear"></span> <span id="thisdomain"></span><script>jQuery('#thisyear').html(new Date().getFullYear())
+jQuery('#thisdomain').html(window.location.hostname)</script>
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
 </body>
 
 </html>
