Signed-off-by: kitaberesaman <huli.ateen@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+<!-- Google Analytics snippet added by Site Kit -->
+<script type='text/javascript' src='https://www.googletagmanager.com/gtag/js?id=UA-232397630-1' async></script>
+<script type='text/javascript'>
+window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}
+gtag('set', 'linker', {"domains":["kitaberesaman.simarttech.com"]} );
+gtag("js", new Date());
+gtag("set", "developer_id.dZTNiMT", true);
+gtag("config", "UA-232397630-1", {"anonymize_ip":true});
+</script>
+
+<!-- End Google Analytics snippet added by Site Kit -->
+<meta name="googlesitekit-setup" content="d416cfea-a55b-4e6f-82d0-1805e6fc8d8f" />
 </head>
 
 <body>
@@ -114,7 +126,6 @@
         </div>
     </div>
     <footer>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <ul class="nav nav-tabs">
             <li class="active"><a href="https://www.patta.com/en/terms-conditions">Terms &amp; Conditions<br></a></li>
             <li><a href="https://www.patta.com/en/privacy-policy">Privacy Policy</a></li>
@@ -129,7 +140,7 @@
         </div>Copyright @<span id="thisyear"></span> <span id="thisdomain"></span><script>jQuery('#thisyear').html(new Date().getFullYear())
 jQuery('#thisdomain').html(window.location.hostname)</script>
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
 </body>
