Signed-off-by: kitaberesaman <huli.ateen@gmail.com>

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ gtag("config", "UA-232397630-1", {"anonymize_ip":true});
                 <p class="text-center" style="margin-top: 50px;margin-bottom: 20px;">We focus on details without compromising from quality assurance, packaging, to shipping procedures. We strictly respect and follow ISO9001, ISO/TS16949, and ISO 14001 standard to pursue quality excellence.<br></p>
             </div>
         </div>
-    </div>
+    </div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63364.27366053059!2d110.37533703125!3d-6.977778399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e708cb3b69d6619%3A0x373827744182d56e!2sMoro%20Beres!5e0!3m2!1sen!2sid!4v1655590974584!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer>
         <ul class="nav nav-tabs">
             <li class="active"><a href="https://www.patta.com/en/terms-conditions">Terms &amp; Conditions<br></a></li>
@@ -137,10 +137,11 @@ gtag("config", "UA-232397630-1", {"anonymize_ip":true});
                     <p>PATTA International<br></p>
                 </div>
             </div>
+			 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         </div>Copyright @<span id="thisyear"></span> <span id="thisdomain"></span><script>jQuery('#thisyear').html(new Date().getFullYear())
 jQuery('#thisdomain').html(window.location.hostname)</script>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
 </body>
